tests/snapshots/golden_cli__search_json.snap
---
source: tests/golden_cli.rs
---
[
  {
    "argv": "story search engine --json",
    "stdout": {
      "result": "ok",
      "stories": [
        {
          "story": {
            "awaiting": null,
            "comments": [],
            "complexity": "medium",
            "complexity_assessed": false,
            "created_at": "[timestamp]",
            "id": "SH-1",
            "priority": "critical",
            "priority_assessed": true,
            "relationships": [
              {
                "other_id": "SH-2",
                "relation": "parent-of"
              },
              {
                "other_id": "SH-3",
                "relation": "parent-of"
              },
              {
                "other_id": "SH-4",
                "relation": "parent-of"
              }
            ],
            "state": "in-progress",
            "state_computed": true,
            "story_type": "epic",
            "superstate": "OPEN",
            "title": "Design the storage engine",
            "updated_at": "[timestamp]"
          }
        },
        {
          "story": {
            "awaiting": null,
            "comments": [
              {
                "at": "[timestamp]",
                "text": "AGENT BLOCK DELIVERY #2 — interrupt unreached — SH-3\n\n> no agent reached: the golden corpus dispatches nothing"
              }
            ],
            "complexity": "medium",
            "complexity_assessed": false,
            "created_at": "[timestamp]",
            "id": "SH-3",
            "labels": [
              "backend",
              "phase:1"
            ],
            "priority": "high",
            "priority_assessed": true,
            "relationships": [
              {
                "other_id": "SH-2",
                "relation": "blocked-by"
              },
              {
                "other_id": "SH-1",
                "relation": "child-of"
              }
            ],
            "state": "in-progress",
            "story_type": "normal",
            "superstate": "OPEN",
            "title": "Implement the SQLite engine",
            "updated_at": "[timestamp]"
          }
        },
        {
          "story": {
            "awaiting": null,
            "comments": [],
            "complexity": "medium",
            "complexity_assessed": false,
            "created_at": "[timestamp]",
            "id": "SH-15",
            "priority": "low",
            "priority_assessed": true,
            "relationships": [
              {
                "other_id": "SH-16",
                "relation": "parent-of"
              }
            ],
            "state": "todo",
            "state_computed": true,
            "story_type": "epic",
            "superstate": "OPEN",
            "title": "Track engine adoption",
            "updated_at": "[timestamp]"
          }
        }
      ]
    }
  },
  {
    "argv": "story search worktrees --json",
    "stdout": {
      "result": "ok",
      "stories": [
        {
          "story": {
            "awaiting": null,
            "comments": [
              {
                "at": "[timestamp]",
                "text": "Reproduced with two linked worktrees."
              },
              {
                "at": "[timestamp]",
                "text": "Root cause is the committed next-id counter."
              }
            ],
            "complexity": "medium",
            "complexity_assessed": false,
            "created_at": "[timestamp]",
            "id": "SH-5",
            "labels": [
              "defect"
            ],
            "priority": "critical",
            "priority_assessed": true,
            "relationships": [
              {
                "other_id": "SH-9",
                "relation": "blocks"
              }
            ],
            "state": "todo",
            "story_type": "bug",
            "superstate": "OPEN",
            "title": "Fix the id collision across worktrees",
            "updated_at": "[timestamp]"
          }
        }
      ]
    }
  },
  {
    "argv": "story search backend --json",
    "stdout": {
      "result": "ok",
      "stories": [
        {
          "story": {
            "awaiting": null,
            "comments": [
              {
                "at": "[timestamp]",
                "text": "Trait shape settled: one method per verb."
              }
            ],
            "complexity": "medium",
            "complexity_assessed": false,
            "created_at": "[timestamp]",
            "id": "SH-2",
            "labels": [
              "api",
              "backend",
              "phase:1"
            ],
            "priority": "high",
            "priority_assessed": true,
            "relationships": [
              {
                "other_id": "SH-3",
                "relation": "blocks"
              },
              {
                "other_id": "SH-1",
                "relation": "child-of"
              }
            ],
            "state": "todo",
            "story_type": "normal",
            "superstate": "OPEN",
            "title": "Define the Store trait",
            "updated_at": "[timestamp]"
          }
        },
        {
          "story": {
            "awaiting": null,
            "comments": [
              {
                "at": "[timestamp]",
                "text": "AGENT BLOCK DELIVERY #2 — interrupt unreached — SH-3\n\n> no agent reached: the golden corpus dispatches nothing"
              }
            ],
            "complexity": "medium",
            "complexity_assessed": false,
            "created_at": "[timestamp]",
            "id": "SH-3",
            "labels": [
              "backend",
              "phase:1"
            ],
            "priority": "high",
            "priority_assessed": true,
            "relationships": [
              {
                "other_id": "SH-2",
                "relation": "blocked-by"
              },
              {
                "other_id": "SH-1",
                "relation": "child-of"
              }
            ],
            "state": "in-progress",
            "story_type": "normal",
            "superstate": "OPEN",
            "title": "Implement the SQLite engine",
            "updated_at": "[timestamp]"
          }
        },
        {
          "story": {
            "awaiting": null,
            "comments": [],
            "complexity": "medium",
            "complexity_assessed": false,
            "created_at": "[timestamp]",
            "id": "SH-4",
            "labels": [
              "backend"
            ],
            "priority": "medium",
            "priority_assessed": true,
            "relationships": [
              {
                "other_id": "SH-1",
                "relation": "child-of"
              }
            ],
            "state": "review",
            "story_type": "normal",
            "superstate": "OPEN",
            "title": "Write the migration runner",
            "updated_at": "[timestamp]"
          }
        }
      ]
    }
  },
  {
    "argv": "story search ENGINE --json",
    "stdout": {
      "result": "ok",
      "stories": [
        {
          "story": {
            "awaiting": null,
            "comments": [],
            "complexity": "medium",
            "complexity_assessed": false,
            "created_at": "[timestamp]",
            "id": "SH-1",
            "priority": "critical",
            "priority_assessed": true,
            "relationships": [
              {
                "other_id": "SH-2",
                "relation": "parent-of"
              },
              {
                "other_id": "SH-3",
                "relation": "parent-of"
              },
              {
                "other_id": "SH-4",
                "relation": "parent-of"
              }
            ],
            "state": "in-progress",
            "state_computed": true,
            "story_type": "epic",
            "superstate": "OPEN",
            "title": "Design the storage engine",
            "updated_at": "[timestamp]"
          }
        },
        {
          "story": {
            "awaiting": null,
            "comments": [
              {
                "at": "[timestamp]",
                "text": "AGENT BLOCK DELIVERY #2 — interrupt unreached — SH-3\n\n> no agent reached: the golden corpus dispatches nothing"
              }
            ],
            "complexity": "medium",
            "complexity_assessed": false,
            "created_at": "[timestamp]",
            "id": "SH-3",
            "labels": [
              "backend",
              "phase:1"
            ],
            "priority": "high",
            "priority_assessed": true,
            "relationships": [
              {
                "other_id": "SH-2",
                "relation": "blocked-by"
              },
              {
                "other_id": "SH-1",
                "relation": "child-of"
              }
            ],
            "state": "in-progress",
            "story_type": "normal",
            "superstate": "OPEN",
            "title": "Implement the SQLite engine",
            "updated_at": "[timestamp]"
          }
        },
        {
          "story": {
            "awaiting": null,
            "comments": [],
            "complexity": "medium",
            "complexity_assessed": false,
            "created_at": "[timestamp]",
            "id": "SH-15",
            "priority": "low",
            "priority_assessed": true,
            "relationships": [
              {
                "other_id": "SH-16",
                "relation": "parent-of"
              }
            ],
            "state": "todo",
            "state_computed": true,
            "story_type": "epic",
            "superstate": "OPEN",
            "title": "Track engine adoption",
            "updated_at": "[timestamp]"
          }
        }
      ]
    }
  },
  {
    "argv": "story search the storage engine --json",
    "stdout": {
      "result": "ok",
      "stories": [
        {
          "story": {
            "awaiting": null,
            "comments": [],
            "complexity": "medium",
            "complexity_assessed": false,
            "created_at": "[timestamp]",
            "id": "SH-1",
            "priority": "critical",
            "priority_assessed": true,
            "relationships": [
              {
                "other_id": "SH-2",
                "relation": "parent-of"
              },
              {
                "other_id": "SH-3",
                "relation": "parent-of"
              },
              {
                "other_id": "SH-4",
                "relation": "parent-of"
              }
            ],
            "state": "in-progress",
            "state_computed": true,
            "story_type": "epic",
            "superstate": "OPEN",
            "title": "Design the storage engine",
            "updated_at": "[timestamp]"
          }
        }
      ]
    }
  },
  {
    "argv": "story search nothing-matches-this --json",
    "stdout": {
      "result": "ok",
      "stories": []
    }
  }
]
