tests/snapshots/golden_cli__show_human.snap
---
source: tests/golden_cli.rs
---
$ story show SH-1
SH-1 Design the storage engine
state: in-progress (OPEN)
draft: no
priority: critical
complexity: medium (unassessed)
type: epic
labels: -
flagged: no
relationships:
- parent-of SH-2
- parent-of SH-3
- parent-of SH-4
progress: 0/3 children done (0%)

$ story show SH-5
SH-5 Fix the id collision across worktrees
state: todo (OPEN)
draft: no
priority: critical
complexity: medium (unassessed)
type: bug
labels: defect
flagged: no
relationships:
- blocks SH-9
comments:
- [timestamp] Reproduced with two linked worktrees.
- [timestamp] Root cause is the committed next-id counter.

$ story show SH-6
SH-6 Benchmark the rebuild path
state: todo (OPEN)
draft: no
priority: low
complexity: medium (unassessed)
type: spike
labels: -
awaiting: waiting on the benchmark harness
flagged: no

$ story show SH-7
SH-7 Document the data layer
state: todo (OPEN)
draft: no
priority: low
complexity: medium (unassessed)
type: chore
labels: -
flagged: no

$ story show SH-3
SH-3 Implement the SQLite engine
state: in-progress (OPEN)
draft: no
priority: high
complexity: medium (unassessed)
type: normal
labels: backend, phase:1
flagged: no
relationships:
- blocked-by SH-2
- child-of SH-1
comments:
- [timestamp] AGENT BLOCK DELIVERY #2 — interrupt unreached — SH-3

> no agent reached: the golden corpus dispatches nothing

$ story show SH-8
SH-8 Retire the JSONL reader
state: done (CLOSED)
draft: no
priority: low
complexity: medium (unassessed)
type: chore
labels: -
closed_at: [timestamp]
flagged: no

$ story show SH-13
SH-13 Old approach: file-per-story
state: dropped (CLOSED)
draft: no
priority: low
complexity: medium (unassessed)
type: chore
labels: -
closed_at: [timestamp]
flagged: no
comments:
- [timestamp] superseded by the global store
