tests/snapshots/golden_cli__show_json.snap
---
source: tests/golden_cli.rs
---
[
  {
    "argv": "story show SH-1 --json",
    "stdout": {
      "result": "ok",
      "story": {
        "head_global_seq": 53,
        "progress": {
          "children_done": 0,
          "children_total": 3
        },
        "story": {
          "awaiting": null,
          "comments": [],
          "complexity": "medium",
          "complexity_assessed": false,
          "created_at": "[timestamp]",
          "id": "SH-1",
          "priority": "critical",
          "priority_assessed": true,
          "relationships": [
            {
              "other_id": "SH-2",
              "relation": "parent-of"
            },
            {
              "other_id": "SH-3",
              "relation": "parent-of"
            },
            {
              "other_id": "SH-4",
              "relation": "parent-of"
            }
          ],
          "state": "in-progress",
          "state_computed": true,
          "story_type": "epic",
          "superstate": "OPEN",
          "title": "Design the storage engine",
          "updated_at": "[timestamp]"
        }
      }
    }
  },
  {
    "argv": "story show SH-5 --json",
    "stdout": {
      "result": "ok",
      "story": {
        "head_global_seq": 62,
        "story": {
          "awaiting": null,
          "comments": [
            {
              "at": "[timestamp]",
              "text": "Reproduced with two linked worktrees."
            },
            {
              "at": "[timestamp]",
              "text": "Root cause is the committed next-id counter."
            }
          ],
          "complexity": "medium",
          "complexity_assessed": false,
          "created_at": "[timestamp]",
          "id": "SH-5",
          "labels": [
            "defect"
          ],
          "priority": "critical",
          "priority_assessed": true,
          "relationships": [
            {
              "other_id": "SH-9",
              "relation": "blocks"
            }
          ],
          "state": "todo",
          "story_type": "bug",
          "superstate": "OPEN",
          "title": "Fix the id collision across worktrees",
          "updated_at": "[timestamp]"
        }
      }
    }
  },
  {
    "argv": "story show SH-6 --json",
    "stdout": {
      "result": "ok",
      "story": {
        "display_state": "blocked",
        "head_global_seq": 66,
        "story": {
          "awaiting": "waiting on the benchmark harness",
          "comments": [],
          "complexity": "medium",
          "complexity_assessed": false,
          "created_at": "[timestamp]",
          "id": "SH-6",
          "priority": "low",
          "priority_assessed": true,
          "relationships": [],
          "state": "todo",
          "story_type": "spike",
          "superstate": "OPEN",
          "title": "Benchmark the rebuild path",
          "updated_at": "[timestamp]"
        }
      }
    }
  },
  {
    "argv": "story show SH-7 --json",
    "stdout": {
      "result": "ok",
      "story": {
        "head_global_seq": 25,
        "story": {
          "awaiting": null,
          "comments": [],
          "complexity": "medium",
          "complexity_assessed": false,
          "created_at": "[timestamp]",
          "id": "SH-7",
          "priority": "low",
          "priority_assessed": true,
          "relationships": [],
          "state": "todo",
          "story_type": "chore",
          "superstate": "OPEN",
          "title": "Document the data layer",
          "updated_at": "[timestamp]"
        }
      }
    }
  },
  {
    "argv": "story show SH-3 --json",
    "stdout": {
      "result": "ok",
      "story": {
        "head_global_seq": 64,
        "story": {
          "awaiting": null,
          "comments": [
            {
              "at": "[timestamp]",
              "text": "AGENT BLOCK DELIVERY #2 — interrupt unreached — SH-3\n\n> no agent reached: the golden corpus dispatches nothing"
            }
          ],
          "complexity": "medium",
          "complexity_assessed": false,
          "created_at": "[timestamp]",
          "id": "SH-3",
          "labels": [
            "backend",
            "phase:1"
          ],
          "priority": "high",
          "priority_assessed": true,
          "relationships": [
            {
              "other_id": "SH-2",
              "relation": "blocked-by"
            },
            {
              "other_id": "SH-1",
              "relation": "child-of"
            }
          ],
          "state": "in-progress",
          "story_type": "normal",
          "superstate": "OPEN",
          "title": "Implement the SQLite engine",
          "updated_at": "[timestamp]"
        }
      }
    }
  },
  {
    "argv": "story show SH-8 --json",
    "stdout": {
      "result": "ok",
      "story": {
        "head_global_seq": 69,
        "story": {
          "awaiting": null,
          "closed_at": "[timestamp]",
          "comments": [],
          "complexity": "medium",
          "complexity_assessed": false,
          "created_at": "[timestamp]",
          "id": "SH-8",
          "priority": "low",
          "priority_assessed": true,
          "relationships": [],
          "state": "done",
          "story_type": "chore",
          "superstate": "CLOSED",
          "title": "Retire the JSONL reader",
          "updated_at": "[timestamp]"
        }
      }
    }
  },
  {
    "argv": "story show SH-13 --json",
    "stdout": {
      "result": "ok",
      "story": {
        "head_global_seq": 74,
        "story": {
          "awaiting": null,
          "closed_at": "[timestamp]",
          "comments": [
            {
              "at": "[timestamp]",
              "text": "superseded by the global store"
            }
          ],
          "complexity": "medium",
          "complexity_assessed": false,
          "created_at": "[timestamp]",
          "id": "SH-13",
          "priority": "low",
          "priority_assessed": true,
          "relationships": [],
          "state": "dropped",
          "story_type": "chore",
          "superstate": "CLOSED",
          "title": "Old approach: file-per-story",
          "updated_at": "[timestamp]"
        }
      }
    }
  }
]
