tests/snapshots/golden_cli__summary_human.snap
---
source: tests/golden_cli.rs
---
$ story summary
stories: 16 (13 open, 3 closed)
by state:
  done: 2
  dropped: 1
  in-progress: 2
  review: 1
  todo: 10
by priority:
  critical: 2
  high: 3
  low: 7
  medium: 4
by type:
  bug: 1
  chore: 3
  epic: 2
  normal: 8
  spike: 2
blocked: 3
flagged: 0
ready: 8
ready stories:
  SH-5 [todo] (critical) Fix the id collision across worktrees
  SH-2 [todo] (high) Define the Store trait
  SH-12 [todo] (high) Harden concurrent writes
  SH-4 [review] (medium) Write the migration runner
  SH-10 [todo] (medium) Ship the CLI shim

$ story report
stories: 16 (13 open, 3 closed)
by state:
  done: 2
  dropped: 1
  in-progress: 2
  review: 1
  todo: 10
by priority:
  critical: 2
  high: 3
  low: 7
  medium: 4
by type:
  bug: 1
  chore: 3
  epic: 2
  normal: 8
  spike: 2
blocked: 3
flagged: 0
ready: 8
ready stories:
  SH-5 [todo] (critical) Fix the id collision across worktrees
  SH-2 [todo] (high) Define the Store trait
  SH-12 [todo] (high) Harden concurrent writes
  SH-4 [review] (medium) Write the migration runner
  SH-10 [todo] (medium) Ship the CLI shim
