tests/snapshots/golden_cli__summary_json.snap
---
source: tests/golden_cli.rs
---
[
  {
    "argv": "story summary --json",
    "stdout": {
      "result": "ok",
      "summary": {
        "blocked_count": 3,
        "by_priority": [
          [
            "critical",
            2
          ],
          [
            "high",
            3
          ],
          [
            "low",
            7
          ],
          [
            "medium",
            4
          ]
        ],
        "by_state": [
          [
            "done",
            2
          ],
          [
            "dropped",
            1
          ],
          [
            "in-progress",
            2
          ],
          [
            "review",
            1
          ],
          [
            "todo",
            10
          ]
        ],
        "by_type": [
          [
            "bug",
            1
          ],
          [
            "chore",
            3
          ],
          [
            "epic",
            2
          ],
          [
            "normal",
            8
          ],
          [
            "spike",
            2
          ]
        ],
        "flagged_count": 0,
        "ready_count": 8,
        "ready_stories": [
          {
            "head_global_seq": 62,
            "story": {
              "awaiting": null,
              "comments": [
                {
                  "at": "[timestamp]",
                  "text": "Reproduced with two linked worktrees."
                },
                {
                  "at": "[timestamp]",
                  "text": "Root cause is the committed next-id counter."
                }
              ],
              "complexity": "medium",
              "complexity_assessed": false,
              "created_at": "[timestamp]",
              "id": "SH-5",
              "labels": [
                "defect"
              ],
              "priority": "critical",
              "priority_assessed": true,
              "relationships": [
                {
                  "other_id": "SH-9",
                  "relation": "blocks"
                }
              ],
              "state": "todo",
              "story_type": "bug",
              "superstate": "OPEN",
              "title": "Fix the id collision across worktrees",
              "updated_at": "[timestamp]"
            }
          },
          {
            "head_global_seq": 63,
            "story": {
              "awaiting": null,
              "comments": [
                {
                  "at": "[timestamp]",
                  "text": "Trait shape settled: one method per verb."
                }
              ],
              "complexity": "medium",
              "complexity_assessed": false,
              "created_at": "[timestamp]",
              "id": "SH-2",
              "labels": [
                "api",
                "backend",
                "phase:1"
              ],
              "priority": "high",
              "priority_assessed": true,
              "relationships": [
                {
                  "other_id": "SH-3",
                  "relation": "blocks"
                },
                {
                  "other_id": "SH-1",
                  "relation": "child-of"
                }
              ],
              "state": "todo",
              "story_type": "normal",
              "superstate": "OPEN",
              "title": "Define the Store trait",
              "updated_at": "[timestamp]"
            }
          },
          {
            "head_global_seq": 40,
            "story": {
              "awaiting": null,
              "comments": [],
              "complexity": "medium",
              "complexity_assessed": false,
              "created_at": "[timestamp]",
              "id": "SH-12",
              "priority": "high",
              "priority_assessed": true,
              "relationships": [],
              "state": "todo",
              "story_type": "normal",
              "superstate": "OPEN",
              "title": "Harden concurrent writes",
              "updated_at": "[timestamp]"
            }
          },
          {
            "head_global_seq": 67,
            "story": {
              "awaiting": null,
              "comments": [],
              "complexity": "medium",
              "complexity_assessed": false,
              "created_at": "[timestamp]",
              "id": "SH-4",
              "labels": [
                "backend"
              ],
              "priority": "medium",
              "priority_assessed": true,
              "relationships": [
                {
                  "other_id": "SH-1",
                  "relation": "child-of"
                }
              ],
              "state": "review",
              "story_type": "normal",
              "superstate": "OPEN",
              "title": "Write the migration runner",
              "updated_at": "[timestamp]"
            }
          },
          {
            "head_global_seq": 34,
            "story": {
              "awaiting": null,
              "comments": [],
              "complexity": "medium",
              "complexity_assessed": false,
              "created_at": "[timestamp]",
              "id": "SH-10",
              "priority": "medium",
              "priority_assessed": true,
              "relationships": [],
              "state": "todo",
              "story_type": "normal",
              "superstate": "OPEN",
              "title": "Ship the CLI shim",
              "updated_at": "[timestamp]"
            }
          }
        ],
        "total_closed": 3,
        "total_open": 13
      },
      "verifier": {
        "active": null,
        "attribution_holds": [],
        "control": "running",
        "evidence_error": null,
        "first_hit_story": null,
        "held_reasons": [],
        "held_stories": [],
        "host_recoveries": [],
        "incident": null,
        "incident_age_seconds": null,
        "incident_is_current": false,
        "integration_recoveries": [],
        "last_evidence_at": null,
        "project": "[project]",
        "project_recoveries": [],
        "recovery": {
          "acknowledgement": null,
          "request": null
        },
        "retry_count": 0,
        "silence_seconds": null,
        "verifying": [],
        "warning": null
      }
    }
  },
  {
    "argv": "story report --json",
    "stdout": {
      "result": "ok",
      "summary": {
        "blocked_count": 3,
        "by_priority": [
          [
            "critical",
            2
          ],
          [
            "high",
            3
          ],
          [
            "low",
            7
          ],
          [
            "medium",
            4
          ]
        ],
        "by_state": [
          [
            "done",
            2
          ],
          [
            "dropped",
            1
          ],
          [
            "in-progress",
            2
          ],
          [
            "review",
            1
          ],
          [
            "todo",
            10
          ]
        ],
        "by_type": [
          [
            "bug",
            1
          ],
          [
            "chore",
            3
          ],
          [
            "epic",
            2
          ],
          [
            "normal",
            8
          ],
          [
            "spike",
            2
          ]
        ],
        "flagged_count": 0,
        "ready_count": 8,
        "ready_stories": [
          {
            "head_global_seq": 62,
            "story": {
              "awaiting": null,
              "comments": [
                {
                  "at": "[timestamp]",
                  "text": "Reproduced with two linked worktrees."
                },
                {
                  "at": "[timestamp]",
                  "text": "Root cause is the committed next-id counter."
                }
              ],
              "complexity": "medium",
              "complexity_assessed": false,
              "created_at": "[timestamp]",
              "id": "SH-5",
              "labels": [
                "defect"
              ],
              "priority": "critical",
              "priority_assessed": true,
              "relationships": [
                {
                  "other_id": "SH-9",
                  "relation": "blocks"
                }
              ],
              "state": "todo",
              "story_type": "bug",
              "superstate": "OPEN",
              "title": "Fix the id collision across worktrees",
              "updated_at": "[timestamp]"
            }
          },
          {
            "head_global_seq": 63,
            "story": {
              "awaiting": null,
              "comments": [
                {
                  "at": "[timestamp]",
                  "text": "Trait shape settled: one method per verb."
                }
              ],
              "complexity": "medium",
              "complexity_assessed": false,
              "created_at": "[timestamp]",
              "id": "SH-2",
              "labels": [
                "api",
                "backend",
                "phase:1"
              ],
              "priority": "high",
              "priority_assessed": true,
              "relationships": [
                {
                  "other_id": "SH-3",
                  "relation": "blocks"
                },
                {
                  "other_id": "SH-1",
                  "relation": "child-of"
                }
              ],
              "state": "todo",
              "story_type": "normal",
              "superstate": "OPEN",
              "title": "Define the Store trait",
              "updated_at": "[timestamp]"
            }
          },
          {
            "head_global_seq": 40,
            "story": {
              "awaiting": null,
              "comments": [],
              "complexity": "medium",
              "complexity_assessed": false,
              "created_at": "[timestamp]",
              "id": "SH-12",
              "priority": "high",
              "priority_assessed": true,
              "relationships": [],
              "state": "todo",
              "story_type": "normal",
              "superstate": "OPEN",
              "title": "Harden concurrent writes",
              "updated_at": "[timestamp]"
            }
          },
          {
            "head_global_seq": 67,
            "story": {
              "awaiting": null,
              "comments": [],
              "complexity": "medium",
              "complexity_assessed": false,
              "created_at": "[timestamp]",
              "id": "SH-4",
              "labels": [
                "backend"
              ],
              "priority": "medium",
              "priority_assessed": true,
              "relationships": [
                {
                  "other_id": "SH-1",
                  "relation": "child-of"
                }
              ],
              "state": "review",
              "story_type": "normal",
              "superstate": "OPEN",
              "title": "Write the migration runner",
              "updated_at": "[timestamp]"
            }
          },
          {
            "head_global_seq": 34,
            "story": {
              "awaiting": null,
              "comments": [],
              "complexity": "medium",
              "complexity_assessed": false,
              "created_at": "[timestamp]",
              "id": "SH-10",
              "priority": "medium",
              "priority_assessed": true,
              "relationships": [],
              "state": "todo",
              "story_type": "normal",
              "superstate": "OPEN",
              "title": "Ship the CLI shim",
              "updated_at": "[timestamp]"
            }
          }
        ],
        "total_closed": 3,
        "total_open": 13
      }
    }
  }
]
